--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AltSchool Assignment 1</title>
 </head>
 <body>
     <!-- Top of page fragment identifier using the <a> element -->
